@@ -1,3 +1,7 @@
+2010-03-30  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>
+
+	* gcc.target/s390/stackcheck1.c: New testcase.
+
 2010-03-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR libfortran/43265
